Wrap long labels onto multiple lines to prevent text being cut off

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -384,6 +384,10 @@ input.crm-form-entityref {
   text-align: right;
 }
 
+.crm-container .crm-section .label label{
+  white-space: normal;
+}
+
 .crm-container .label-left .label {
   text-align: left;
 }
